unpackaged/main/default/objects/ET_Invoice_Line_Item__c/ET_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>INLI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>