unpackaged/main/default/objects/ET_Invoice_Line_Item__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>