unpackaged/main/default/objects/ET_Invoice_Line_Item__c/fields/ET_Location__c.field-meta.xml
<CustomField>
    <fullName>ET_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>ET_Location__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>