unpackaged/main/default/objects/ET_Invoice_Line_Item__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project</label>
    <length>100</length>
    <type>Text</type>
</CustomField>