unpackaged/main/default/objects/ET_Invoice_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quantity</label>
    <length>4</length>
    <type>Text</type>
</CustomField>